--- a/pom.xml
+++ b/pom.xml
@@ -23,21 +23,21 @@
     </licenses>
 
     <dependencies>
-         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-dynamodb</artifactId>
-            <version>1.10.63</version>
-            <optional>true</optional>
-        </dependency>   
-<!--     	<dependency> -->
-<!--     		<groupId>com.amazonaws</groupId> -->
-<!--     		<artifactId>aws-java-sdk</artifactId> -->
-<!--     		<version>1.10.47</version> -->
-<!--     	</dependency> -->
+<!--          <dependency> -->
+<!--             <groupId>com.amazonaws</groupId> -->
+<!--             <artifactId>aws-java-sdk-dynamodb</artifactId> -->
+<!--             <version>1.10.63</version> -->
+<!--             <optional>true</optional> -->
+<!--         </dependency>    -->
+    	<dependency>
+    		<groupId>com.amazonaws</groupId>
+    		<artifactId>aws-java-sdk</artifactId>
+    		<version>1.5.4</version>
+    	</dependency>
     	<dependency>
     		<groupId>org.apache.tomcat</groupId>
     		<artifactId>tomcat-catalina</artifactId>
-    		<version>8.0.33</version>
+    		<version>8.0.30</version>
     	</dependency>
     </dependencies>
 
